made the travel image slightly smaller so that the shadow is no longer being cut off from box element below it

--- a/src/components/Home/Travel/traveltips.css
+++ b/src/components/Home/Travel/traveltips.css
@@ -19,7 +19,7 @@
   background-image: url(/src/images/—Pngtree—2.5d\ hand-painted\ creative\ travel\ item_4079261.png);
   background-repeat: no-repeat;
   background-position: right;
-  background-size: 35%;
+  background-size: 30%;
 }
 .listIntro {
   width: 480px;
